# nm-otool

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug.c  full_testing.sh  loader_h.txt  memdump.txt  no_arch.txt  notes.txt  pb_affichage.txt  testing.sh  todo_testing.sh
includes/: ft_nm.h  nm_otool.h
src/: commons.c  ft_nm.c  nm_32.c  nm_64.c  nm_fat.c  print_lib.c  study_fat.c  study_lib.c  study_type.c  swap_function.c  symbol_64.c  symbols.c  usages.c  utils.c
src/ft_nm_files/: ft_nm.c  nm_32.c  nm_64.c  nm_fat.c  print_lib.c  study_fat.c  study_lib.c  study_type.c  symbols.c
src/ft_otool_files/: ft_otool.c  otool_32.c  otool_64.c  print_ppc.c
src/shared/: commons.c  fat.c  nm_fat.c  print_lib.c  study_fat.c  study_lib.c  swap_function.c  utils.c
